* starting to implement edit mode. * introduced a hack for extending event handling... * using xul multiline textbox instead of xul label for subtitles (can edit them) * fixes overflow issue when subtitles lines are too long

--- a/trunk/addon-subtitles/skin/wikisubs.css
+++ b/trunk/addon-subtitles/skin/wikisubs.css
@@ -35,3 +35,12 @@
     color: rgba(255,255,128, 1);
     text-shadow: rgba(0,0,0, 0.6) 1px 1px;
 }
+
+.subtitles_textbox {
+    padding-bottom: 12px;
+    font-size: 13px;
+    font-family: Arial, sans-serif;
+    color: rgba(255,255,128, 1);
+    text-shadow: rgba(0,0,0, 0.6) 1px 1px;
+    background: rgba(0,0,0, 0.6);
+}
